🔧 Fix all compilation errors and reformat Java code
- Fixed 10+ compilation errors
- Reformatted 50+ single-line Java files for readability
- Created 8 missing classes (User, UserRepository, etc.)
- Removed 12 duplicate files
- Fixed Java 8 compatibility (List.of() → Collections.emptyList())
- Fixed var keyword usage
- All code now compiles successfully (BUILD SUCCESS)

Changes:
- SocialNetworkDemo: Removed duplicate User.java
- UserService: Created missing classes
- TicTacToeGame: Java 8 compatibility
- RideHailingDemo: Fixed imports, reformatted
- ATM: Fixed var keyword
- PaymentGateway: Fixed duplicates
- Restaurant: Cleaned up old files
- Refund: Added getAmount() method
- And many more formatting improvements

Total: 60+ files modified/created/removed